syntax = "proto3";

package spine.test.commands;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.commands";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;

message CmdCreateProject {

    string id = 1;
}

message CmdStartProject {

    string id = 1;
}

message CmdStopProject {

    string id = 1;
}
